Header fixes (alignment), combining pages, css etc

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /* Global Styles */
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
 body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -10,8 +17,12 @@ body {
   color: #ffffff;
 }
 
-/* Site Header */
-.site-header {
+/* 
+█░█ █▀▀ ▄▀█ █▀▄ █▀▀ █▀█
+█▀█ ██▄ █▀█ █▄▀ ██▄ █▀▄
+*/
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,13 +35,13 @@ body {
   box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.2);
 }
 
-.site-header h1 {
+header h1 {
   font-size: 24px;
   color: #ffffff;
   margin: 0;
 }
 
-.site-header nav {
+header nav {
   width: 100%;
   display: flex;
   align-items: center;
@@ -39,38 +50,88 @@ body {
   padding-right: 25px;
 }
 
-.site-header ul {
-  display: inline;
-  list-style-type: none;
-  margin: 0 10px;
+.header-options-left {
+  margin-left: auto;
+  display: flex;
+  float: left;
+  margin: 0;
   padding: 0;
-  position: relative;
+}
+
+.header-options-left li {
+  display: flex;
+  float: left;
+  padding: 0 10px;
+  margin: 0;
+  align-items: center;
 }
 
 .header-options-right {
-  display: flex;
   margin-left: auto;
+  display: flex;
   float: right;
 }
 
-.site-header ul li {
-  display: inline-block;
-  margin-right: 10px;
+.header-options-right li {
+  display: flex;
+  float: right;
+  padding: 0 10px;
+  margin: 0;
+  align-items: center;
 }
 
-.site-header ul li a,
-.site-header ul li h1 {
-  color: #ffffff;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.site-header ul li a:hover,
-.site-header ul li h1:hover {
+header a:hover,
+header h1:hover {
   color: #999999;
 }
 
-/* Main Content */
+/* Dropdown Stuffz */
+
+.dropdown {
+  cursor: pointer;
+  transition: all 0.15s ease;
+}
+
+.dropdown-container {
+  display: none;
+  position: absolute;
+  margin-top: 35px;
+  margin-left: -15px;
+  padding: 10px;
+  width: 100%;
+}
+
+.dropdown-content {
+  min-width: 100px;
+  max-width: 750px;
+  position: absolute;
+  padding: 5px;
+  z-index: 15;
+  border: none;
+  border-radius: 5px;
+  background-color: #4a4a4a;
+  box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
+}
+
+.dropdown:hover .dropdown-container {
+  display: block;
+}
+
+.dropdown:hover {
+  color: #999999;
+}
+
+.dropdown-container li {
+  margin: 0;
+  padding: 5px 10px;
+}
+
+
+/* 
+█▀▄▀█ ▄▀█ █ █▄░█   █▀▀ █▀█ █▄░█ ▀█▀ █▀▀ █▄░█ ▀█▀
+█░▀░█ █▀█ █ █░▀█   █▄▄ █▄█ █░▀█ ░█░ ██▄ █░▀█ ░█░
+*/
+
 .container,
 .centered-container {
   justify-content: center;
@@ -103,7 +164,7 @@ h5,
 h6,
 p {
   color: #ffffff;
-  transition: color 0.15s ease;
+  transition: all 0.15s ease;
 }
 
 h1 {
@@ -148,18 +209,24 @@ p {
   padding: 5px;
 }
 
+.page-title {
+  margin: 20px;
+  padding: 20px;
+}
+
 /* Buttons */
 .button-link,
 .large-button-link,
 button {
   font-size: 14px;
+  margin: 10px 20px;
   padding: 10px 20px;
   background-color: #4a4a4a;
   color: #ffffff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.15s ease;
+  transition: all 0.15s ease;
   box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
   text-decoration: none;
 }
@@ -199,7 +266,7 @@ button:active {
 }
 
 /* Footer */
-.footer {
+footer {
   font-size: 12px;
   text-align: center;
   opacity: 0.5;
@@ -267,6 +334,13 @@ a {
   transition: color 0.15s ease;
 }
 
+a.anchor {
+  display: block;
+  position: relative;
+  top: -100px;
+  visibility: hidden;
+}
+
 .link a {
   color: #ffffff;
   text-decoration: none;
@@ -277,6 +351,7 @@ a {
 }
 
 /* Lists */
+
 ul {
   list-style-type: disc;
   padding-left: 20px;
@@ -289,16 +364,20 @@ ol {
 
 li {
   margin-bottom: 5px;
-}
-
-.dropdown-content li {
-  margin: 5px 10px;
+  text-decoration: none;
 }
 
 /* Images */
 img {
   max-width: 100%;
   height: auto;
+}
+
+/* Horizontal Lines */
+
+hr {
+  margin: 30px 120px;
+  box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
 }
 
 /* Tables */
@@ -344,41 +423,6 @@ textarea {
   resize: vertical;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  transition: all 0.15s ease;
-}
-
-.dropdown:hover {
-  color: #999999;
-}
-
-.dropdown-container {
-  display: none;
-  position: absolute;
-  width: 100%;
-  padding: 10px;
-}
-
-.dropdown-content {
-  position: absolute;
-  background-color: #4a4a4a;
-  min-width: 360px; 
-  box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
-  padding: 50px;
-  z-index: 1;
-  font-size: 14px;
-  border: none; 
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.dropdown:hover .dropdown-container{
-  display: block;
-}
-
 /* Hero Section */
 .hero-section {
   text-align: center;
@@ -387,6 +431,11 @@ textarea {
   padding-top: 150px;
   background-color: #333333;
   color: #ffffff;
+  background-position: center;
+  background-size: auto 105%;
+  box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
+  border: none;
+  border-radius: 5px;
 }
 
 .hero-section h2 {
@@ -404,17 +453,17 @@ textarea {
 .feature-section {
   display: flex;
   justify-content: space-around;
-  background-color: #1f1f1f;
   color: #ffffff;
   margin: 10px 0;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 .feature-card {
   text-align: center;
-  padding: 40px;
+  padding: 50px 20px;
   margin: 10px;
   border-radius: 5px;
+  width: 100%;
   background-color: #2a2a2a;
   box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
   justify-content: space-between;
@@ -422,20 +471,17 @@ textarea {
 }
 
 .feature-card:hover h3 {
-  font-size: 28px;
-  margin-top: 20px;
+  transform: scale(1.15);
 }
 
 .feature-card h3 {
   font-size: 24px;
   margin-bottom: 20px;
-  transition: all 0.15s ease;
 }
 
 .feature-card p {
   font-size: 16px;
   color: #cccccc;
-  margin-bottom: 30px;
 }
 
 /* Testimonial Section */
@@ -464,7 +510,7 @@ textarea {
 .testimonial blockquote {
   font-size: 18px;
   color: #cccccc;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .testimonial cite {
@@ -524,8 +570,41 @@ textarea {
   border-radius: 10px;
 }
 
+.video-container {
+  align-items: center;
+  align-self: center;
+  position: relative;
+  margin: 15px auto;
+  width: 75%;
+  padding-bottom: 42.1875%; /* 16:9 */
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 iframe {
   box-shadow: 0px 10px 5px -5px rgba(0,0,0,0.2);
+}
+
+.subtle {
+  margin: 0;
+  opacity: 50%;
+}
+
+.copyright {
+  margin: 0;
+  opacity: 25%;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
